test/patterns_bak/s0198_house_robber/hafis/starchat/jml_syntax_checking.txt
./test/s0198_house_robber/hafis/starchat/Solution.java:14: error: bad operand types for binary operator '<='
//@ requires(\forall int i; 0 <= i < nums.length; ((nums <= 400) && (nums >= 0)));
                                                         ^
  first type:  int[]
  second type: int
./test/s0198_house_robber/hafis/starchat/Solution.java:14: error: bad operand types for binary operator '>='
//@ requires(\forall int i; 0 <= i < nums.length; ((nums <= 400) && (nums >= 0)));
                                                                          ^
  first type:  int[]
  second type: int
2 errors
